<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/purple"
	tools:context="srifqi.simetri.daftartugas.Tentang" >

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/app_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/app_name"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/white" />

		<TextView
			android:id="@+id/version"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/version"
			android:textColor="@color/orangeA200" />

		<TextView
			android:id="@+id/about"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:text="@string/simple_desc"
			android:textColor="@color/white" />
	</LinearLayout>

	<TextView
		android:id="@+id/about_bottom"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/btn_tos"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:text="@string/about_text"
		android:textColor="@color/white" />

	<TextView
		android:id="@+id/btn_tos"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:clickable="true"
		android:onClick="openTOS"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:text="@string/tos"
		android:textColor="@color/orangeA200" />
</RelativeLayout>
