<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="srifqi.simetri.daftartugas.DaftarTugas" >

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/action_logout"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/title_activity_tentang"
        android:showAsAction="never"
        app:showAsAction="never"/>

</menu>
