<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res/srifqi.simetri.daftartugas"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="srifqi.simetri.daftartugas.PengaturanAlarmActivity" >

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar1"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		android:elevation="4dp"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="8dp"
		android:orientation="vertical" >

		<CheckBox
		    android:id="@+id/AlarmEnabledCheckBox"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:onClick="toogleAlarm"
		    android:text="@string/use_alarm" />

		<TimePicker
		    android:id="@+id/AlarmTimeTimePicker"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="8dp"
			android:visibility="gone" />

		<CheckBox
		    android:id="@+id/AlarmOnlyIfHasntDoneCheckBox"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
		    android:onClick="toogleAlarmOnlyIfHasntDone"
			android:visibility="gone"
		    android:text="@string/alarm_only_if_hasnt_done" />

		<CheckBox
		    android:id="@+id/AlarmOnlyTomorrowCheckBox"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginLeft="32dp"
		    android:onClick="toogleAlarmOnlyTomorrow"
			android:visibility="gone"
		    android:text="@string/alarm_only_tomorrow" />

	</LinearLayout>
</LinearLayout>
