<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res/srifqi.simetri.daftartugas"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="srifqi.simetri.daftartugas.MasukActivity" >

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar1"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		android:elevation="4dp"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/textView1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/welcome_text" />

			<TextView
				android:id="@+id/textView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/masuk_welcome_text" />

			<EditText
				android:id="@+id/editTextNamaPengguna"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:ems="10"
				android:hint="@+string/edittext_nama_pengguna"
				android:inputType="text"
				android:imeOptions="flagNavigateNext" >

				<requestFocus />
			</EditText>

			<EditText
				android:id="@+id/editTextKataSandi"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:ems="10"
				android:hint="@+string/edittext_kata_sandi"
				android:inputType="textPassword"
				android:imeOptions="flagNavigatePrevious|flagNavigateNext" />

			<EditText
				android:id="@+id/editTextProjectID"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:ems="10"
				android:hint="@+string/edittext_project_id"
				android:inputType="text"
				android:imeOptions="flagNavigatePrevious|actionDone"
				android:imeActionLabel="@string/btn_masuk" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal" >

			<Button
				android:id="@+id/btn_masuk"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:elevation="2dp"
				android:onClick="doMasuk"
				android:text="@+string/btn_masuk" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
